UI changes and Quiz progress

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -5,3 +5,35 @@
 html {
   background-color: #fffff0;
 }
+
+.buttonTB {
+  cursor: pointer;
+  font-weight: 700;
+  font-family: Helvetica, 'sans-serif';
+  transition: all 0.2s;
+  padding: 10px 20px;
+  border-radius: 100px;
+  background: #cfef00;
+  border: 1px solid transparent;
+  display: flex;
+  align-items: center;
+  font-size: 15px;
+}
+
+.buttonTB:hover {
+  background: #c4e201;
+}
+
+.buttonTB > svg {
+  width: 34px;
+  margin-left: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.buttonTB:hover svg {
+  transform: translateX(5px);
+}
+
+.buttonTB:active {
+  transform: scale(0.95);
+}
