morning quiz push

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -13,7 +13,7 @@ html {
   transition: all 0.2s;
   padding: 10px 20px;
   border-radius: 100px;
-  background: #cfef00;
+  background: #30df36;
   border: 1px solid transparent;
   display: flex;
   align-items: center;
@@ -21,7 +21,7 @@ html {
 }
 
 .buttonTB:hover {
-  background: #c4e201;
+  background: #30df36;
 }
 
 .buttonTB > svg {
