fixed quiz bug and no extra links

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -37,3 +37,10 @@ html {
 .buttonTB:active {
   transform: scale(0.95);
 }
+
+.gridChoices {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
+  grid-gap: 1rem;
+}
