--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -9,7 +9,7 @@ html {
 .buttonTB {
   cursor: pointer;
   font-weight: 700;
-  font-family: Helvetica, "sans-serif";
+  font-family: Helvetica, 'sans-serif';
   transition: all 0.2s;
   padding: 10px 20px;
   border-radius: 100px;
@@ -19,11 +19,16 @@ html {
   align-items: center;
   font-size: 15px;
 }
+.buttonLightTB {
+  background-color: #e4e4e4;
+}
 
 .buttonTB:hover {
   background: #30df36;
 }
-
+.buttonLightTB:hover {
+  background-color: rgb(255, 255, 255);
+}
 .buttonTB > svg {
   width: 34px;
   margin-left: 10px;
@@ -100,4 +105,60 @@ Card
   grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
   grid-gap: 1rem;
   place-content: center;
+}
+
+.fade-in {
+  opacity: 1;
+  transition: opacity 1s ease-in-out;
+}
+
+.fade-out {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  pointer-events: none; /* Disable interaction during the fade-out animation */
+}
+
+.loader,
+.loader::before,
+.loader::after {
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 10px;
+  animation: rotate 5s linear infinite;
+}
+
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 40px;
+  height: 40px;
+  border-color: #4ff35d;
+}
+
+.loader::before,
+.loader::after {
+  position: absolute;
+  content: '';
+}
+
+.loader::before {
+  border-color: #35d242;
+  width: 110%;
+  height: 110%;
+  animation-delay: 0.5s;
+}
+
+.loader::after {
+  border-color: #3eda36;
+  width: 120%;
+  height: 120%;
+  animation-delay: 0.1s;
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
 }
