ResultCards changed, about accordion added, catalogue update

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-  background-color: #e5e4e4;
+  background-color: #f5f5f5;
 }
 
 .buttonTB {
@@ -103,7 +103,6 @@ Card
 }
 
 .card {
-  margin-left: 20px;
   margin-top: 20px;
   font-family: "Candara", sans-serif;
   width: 220px;
@@ -166,4 +165,95 @@ Card
 .icon a:hover {
   color: #d95d39;
   transform: scale(1.15);
+}
+
+body {
+  background-color: #e0e3e8;
+  font-family: "Rubik", sans-serif;
+}
+
+a,
+a:hover,
+a:focus {
+  text-decoration: none;
+  transition: 0.5s;
+  outline: none;
+}
+
+/* ------------ */
+.text-primary {
+  color: #5a8dee !important;
+}
+.cardAccord {
+  box-shadow: 0px 5px 10px rgba(90, 116, 148, 0.3);
+  background-color: #fff;
+  border-radius: 8px;
+  font-size: 13px;
+  font-weight: 500;
+  letter-spacing: 0.3px;
+  color: #475f7b;
+  overflow: hidden;
+}
+.rc-accordion-toggle {
+  display: flex;
+  align-items: flex-start;
+  cursor: pointer;
+  justify-content: space-between;
+  background-color: #ebedf0;
+  transition: 0.3s;
+}
+.rc-accordion-toggle.active {
+  background-color: #22c55e;
+}
+.rc-accordion-toggle.active .rc-accordion-icon {
+  transform: rotate(180deg);
+  color: #fff;
+}
+.rc-accordion-card {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+.rc-accordion-card:last-child {
+  margin-bottom: 0;
+}
+.rc-accordion-title {
+  font-weight: 500;
+  font-size: 14px;
+  position: relative;
+  margin-bottom: 0;
+  color: #475f7b;
+  transition: 0.3s;
+}
+.rc-accordion-toggle.active .rc-accordion-title {
+  color: #fff;
+}
+.rc-accordion-icon {
+  position: relative;
+  top: 2px;
+  color: #475f7b;
+  transition: 0.35s;
+  font-size: 12px;
+}
+.rc-accordion-body {
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 15px;
+}
+.rc-accordion-body p {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #727e8c;
+}
+.rc-collapse {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  transition: height 0.35s ease;
+}
+.rc-collapse.show {
+  height: auto;
 }
